syntax = "proto3";

package model;

import "google/protobuf/struct.proto";
import "proto/model/card.proto";
import "proto/model/character.proto";
import "proto/model/enums.proto";
import "proto/model/event.proto";

option go_package = "github.com/user/repo/proto/model";

// Player 表示一个连接的玩家（人类或 LLM）。
message Player {
  string id = 1;
  string name = 2;
  PlayerRole role = 3;
  bool is_llm = 4;
  repeated Card hand = 5;
  map<int32, google.protobuf.Value> deduction_knowledge = 6;
  string llm_session_id = 7;
}

// PlayerView 表示特定玩家的游戏状态过滤视图。
message PlayerView {
  string game_id = 1;
  string script_id = 2;
  map<int32, Character> characters = 3;
  map<int32, Player> players = 4;
  int32 current_day = 5;
  int32 current_loop = 6;
  GamePhase current_phase = 7;
  map<int32, bool> active_tragedies = 8;
  map<int32, bool> prevented_tragedies = 9;
  repeated Card your_hand = 10;
  map<int32, google.protobuf.Value> your_deductions = 11;
  repeated GameEvent public_events = 12;
}